--- a/style.css
+++ b/style.css
@@ -2,19 +2,16 @@
 Theme Name: Redirect Manager
 Author: Grant Collins and Collin Blank
 Description: A custom theme built for the Classical Conversations Redirect Manager.
-Version: 2024.1.367
+Version: 2024.1.368
 Requires at least: 5.2
 Tested up to: 6.5
 Requires PHP: 7.0
 License: GNU General Public License v3 or Later
 License URI: https://www.gnu.org/licenses/gpl.html
-Text Domain: blankslate
-
-BlankSlate WordPress Theme 2011-2024
-BlankSlate is distributed under the terms of the GNU GPL
+Text Domain: redirect-manager
 */
 
-/* CSS global variables to go here */
+/* CSS Variables */
 :root {
   /* Fonts */
   --plantin: plantin, Georgia, serif;
@@ -44,7 +41,6 @@ BlankSlate is distributed under the terms of the GNU GPL
   --btn-txt-color-disabled: rgba(0, 0, 0, 0.26);
 }
 
-/* START CUSTOM STYLES */
 * {
   margin: 0;
   padding: 0;
@@ -377,6 +373,11 @@ input[type="checkbox"]:checked::before {
   border-bottom: 1px solid var(--border-color);
 }
 
+.page-header .website-domain {
+  color: var(--txt-color-medium);
+  font-size: 1.1rem;
+}
+
 /* MODAL */
 
 .modal-overlay {
@@ -562,8 +563,153 @@ input[type="checkbox"]:checked::before {
   color: var(--green);
 }
 
+.form-submit-link {
+  font-family: var(--plantin);
+  border: none;
+  background: none;
+  color: var(--txt-color-light);
+  cursor: pointer;
+  font-size: 1rem;
+  text-decoration: underline;
+}
+
+.form-submit-link:hover {
+  color: var(--txt-color-dark);
+}
+
 #website-sandbox-list-item.hidden {
   display: none;
 }
 
-/* END CUSTOM STYLES */
+.search-results-text {
+  display: flex;
+  gap: 8px;
+}
+
+.table-container {
+  margin-top: 8px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  overflow: visible;
+}
+
+.data-table {
+  width: 100%;
+  border-spacing: 0px;
+  position: relative;
+  overflow: visible;
+}
+
+.table-header .table-row {
+  background-color: rgb(5, 31, 66);
+  color: #fff;
+}
+
+.table-row {
+  background-color: #fff;
+}
+
+.table-body .table-row:hover {
+  background-color: var(--btn-bg-color-hover);
+}
+
+.table-row.disabled .table-cell {
+  background-color: var(--red-light);
+  border-color: var(--red);
+}
+
+.table-cell {
+  padding: 8px;
+  text-align: start;
+  border-bottom: 1px solid var(--border-color);
+}
+
+.table-body .table-cell {
+  word-break: break-word;
+}
+
+.table-cell:nth-last-child(2) {
+  white-space: nowrap;
+}
+
+.table-header .table-row .table-cell:first-child {
+  border-top-left-radius: 3px;
+}
+
+.table-header .table-row .table-cell:last-child {
+  border-top-right-radius: 3px;
+}
+
+.table-body .table-row:last-child .table-cell:first-child {
+  border-bottom-left-radius: 3px;
+}
+
+.table-body .table-row:last-child .table-cell:last-child {
+  border-bottom-right-radius: 3px;
+}
+
+.table-body .table-row:last-child .table-cell {
+  border-bottom: 0px;
+}
+
+.table-body .table-row .table-cell:not(:first-child) {
+  color: var(--txt-color-medium);
+}
+
+.table-flag {
+  width: fit-content;
+  font-family: var(--sweet-sans);
+  font-weight: 700;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  padding: 4px 8px;
+  border: 1px solid;
+  border-radius: 4px;
+  white-space: nowrap;
+  background-color: var(--primary-bg-color);
+}
+
+.table-flag.green {
+  background-color: var(--green-light);
+  color: var(--green);
+}
+
+.table-flag.yellow {
+  background-color: var(--yellow-light);
+  color: var(--yellow);
+}
+
+.table-flag.red {
+  background-color: var(--red-light);
+  color: var(--red);
+}
+
+.table-actions {
+  white-space: nowrap;
+  position: relative;
+}
+
+.table-row.disabled .table-flag {
+  background-color: #fff;
+}
+
+.more-actions-menu {
+  position: absolute;
+  left: 100%;
+  top: 50%;
+  transform: translatey(-50%);
+  display: none;
+  margin-left: 4px;
+}
+
+.more-actions-btns {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  padding: 8px 12px;
+  background-color: #fff;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+}
