--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Redirect Manager
 Author: Grant Collins and Collin Blank
 Description: A custom theme built for the Classical Conversations Redirect Manager.
-Version: 2024.1.373
+Version: 2024.1.374
 Requires at least: 5.2
 Tested up to: 6.5
 Requires PHP: 7.0
@@ -255,6 +255,7 @@ input[type="checkbox"]:checked::before {
 
 .sidebar .menu-item a {
   display: flex;
+  gap: 8px;
   font-family: var(--sweet-sans);
   font-weight: 700;
   font-size: 0.8rem;
