--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Redirect Manager
 Author: Grant Collins and Collin Blank
 Description: A custom theme built for the Classical Conversations Redirect Manager.
-Version: 2024.1.374
+Version: 2024.1.375
 Requires at least: 5.2
 Tested up to: 6.5
 Requires PHP: 7.0
@@ -246,7 +246,7 @@ input[type="checkbox"]:checked::before {
 }
 
 .sidebar .main-menu {
-  margin-top: 16px;
+  margin-top: 42px;
   display: flex;
   flex-direction: column;
   gap: 4px;
@@ -255,6 +255,7 @@ input[type="checkbox"]:checked::before {
 
 .sidebar .menu-item a {
   display: flex;
+  align-items: center;
   gap: 8px;
   font-family: var(--sweet-sans);
   font-weight: 700;
@@ -326,6 +327,56 @@ input[type="checkbox"]:checked::before {
   top: 0;
   left: -14px;
   color: #fff;
+}
+
+/* Home Dashboard */
+.dashboard-grid {
+  margin-top: 8px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 16px;
+}
+
+.dashboard-grid-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 4px;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  padding: 24px;
+  border-radius: 4px;
+  background-color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 1px -1px,
+    rgba(0, 0, 0, 0.14) 0px 1px 1px 0px, rgba(0, 0, 0, 0.12) 0px 1px 3px 0px;
+  min-height: 136px;
+}
+
+.card-stat {
+  font-family: var(--sweet-sans);
+  font-size: 2rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 0.025rem;
+}
+
+.card-description {
+  color: var(--txt-color-medium);
+}
+
+.last-created-card {
+  grid-column: 2 / 4;
+}
+
+.last-modified-card {
+  grid-column: 1 / 4;
+}
+
+.redirect-rule-path {
+  display: flex;
+  gap: 4px;
+  flex-wrap: wrap;
 }
 
 /* PAGE NOTICE BANNER */
