--- a/style.css
+++ b/style.css
@@ -402,7 +402,7 @@ input[type="checkbox"]:checked::before {
   list-style-type: disc;
 }
 
-.notice-banner__x-btn i {
+.notice-banner-x-btn i {
   font-size: 1rem;
 }
 
@@ -590,7 +590,8 @@ input[type="checkbox"]:checked::before {
 
 .form-text-input::placeholder,
 .form-textarea::placeholder,
-.form-select::placeholder {
+.form-select::placeholder,
+.form-select:not(.has-value) {
   color: var(--txt-color-light);
 }
 
@@ -612,7 +613,7 @@ input[type="checkbox"]:checked::before {
   border-color: var(--red);
 }
 
-.form-validation-msg {
+.form-feedback-msg {
   font-family: var(--sweet-sans);
   font-weight: 600;
   padding: 4px 2px;
@@ -620,12 +621,12 @@ input[type="checkbox"]:checked::before {
   letter-spacing: 0.025rem;
 }
 
-.form-validation-msg.error {
-  color: var(--red);
+.form-feedback-msg.valid {
+  color: var(--green);
 }
 
-.form-validation-msg.success {
-  color: var(--green);
+.form-feedback-msg.invalid {
+  color: var(--red);
 }
 
 .form-submit-link {
@@ -642,8 +643,11 @@ input[type="checkbox"]:checked::before {
   color: var(--txt-color-dark);
 }
 
-#website-sandbox-list-item.hidden {
+#website-sandbox-list-item {
   display: none;
+}
+#website-sandbox-list-item.active {
+  display: flex;
 }
 
 .search-results-text {
@@ -787,6 +791,10 @@ input[type="checkbox"]:checked::before {
   transform: translatey(-50%);
   display: none;
   margin-left: 4px;
+}
+
+.more-actions-menu.active {
+  display: block;
 }
 
 .more-actions-menu::before {
