--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Redirect Manager
 Author: Grant Collins and Collin Blank
 Description: A custom theme built for the Classical Conversations Redirect Manager.
-Version: 2024.1.380
+Version: 2024.1.381
 Requires at least: 5.2
 Tested up to: 6.5
 Requires PHP: 7.0
@@ -698,7 +698,7 @@ input[type="checkbox"]:checked::before {
   text-align: center;
 }
 
-.table-row.active .table-cell.status {
+.table-row.committed .table-cell.status {
   color: var(--green);
 }
 
