--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Redirect Manager
 Author: Grant Collins and Collin Blank
 Description: A custom theme built for the Classical Conversations Redirect Manager.
-Version: 2024.1.381
+Version: 2024.1.382
 Requires at least: 5.2
 Tested up to: 6.5
 Requires PHP: 7.0
@@ -403,13 +403,13 @@ input[type="checkbox"]:checked::before {
   list-style-type: disc;
 }
 
-.notice-banner-x-btn i {
-  font-size: 1rem;
-}
-
 .notice-banner.error {
   border-color: var(--red);
   background-color: var(--red-light);
+  color: var(--red);
+}
+
+.notice-banner.error .notice-banner-x-btn {
   color: var(--red);
 }
 
@@ -417,6 +417,18 @@ input[type="checkbox"]:checked::before {
   border-color: var(--green);
   background-color: var(--green);
   color: #fff;
+}
+
+.notice-banner.success .notice-banner-x-btn {
+  color: #fff;
+}
+
+.notice-banner-x-btn {
+  transition: transform 0.3s ease-out;
+}
+
+.notice-banner-x-btn:hover {
+  transform: scale(0.9);
 }
 
 .page-header {
