--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Redirect Manager
 Author: Grant Collins and Collin Blank
 Description: A custom theme built for the Classical Conversations Redirect Manager.
-Version: 2024.1.388
+Version: 2024.1.389
 Requires at least: 5.2
 Tested up to: 6.5
 Requires PHP: 7.0
@@ -153,6 +153,15 @@ button i {
   background-color: var(--btn-bg-color-hover);
 }
 
+.btn:has(i) {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.btn:has(i) i {
+  font-size: 1rem;
+}
+
 /* Checkbox */
 input[type="checkbox"] {
   -webkit-appearance: none;
@@ -205,7 +214,8 @@ input[type="checkbox"]:checked::before {
   color: var(--red);
 }
 
-.icon-btn.enable-item-btn:hover {
+.icon-btn.enable-item-btn:hover,
+.icon-btn.commit-single-rule-btn:hover {
   color: var(--green);
 }
 
@@ -922,18 +932,12 @@ input[type="checkbox"]:checked::before {
   border-radius: 4px;
 }
 
+.more-actions-btns .commit-single-rule-btn i {
+  margin-right: 6px;
+}
+
 .dropdown {
   position: relative;
-}
-
-.dropdown-toggle-btn {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-.dropdown-toggle-btn i {
-  font-size: 1rem;
 }
 
 .dropdown-menu {
