--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Redirect Manager
 Author: Grant Collins and Collin Blank
 Description: A custom theme built for the Classical Conversations Redirect Manager.
-Version: 2024.1.389
+Version: 2024.1.390
 Requires at least: 5.2
 Tested up to: 6.5
 Requires PHP: 7.0
@@ -780,7 +780,7 @@ input[type="checkbox"]:checked::before {
 }
 
 .table-body .table-cell:first-child {
-  text-wrap: nowrap;
+  /* text-wrap: nowrap; */
 }
 
 .table-cell:nth-last-child(2) {
